# Hangover

./: .env.dev  .env.example  .env.prod  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
BaseApp/: celery.py  settings.py  urls.py
apps/Core/: models.py  utils.py  views.py
apps/Core/migrations/: 0001_initial.py  0002_initial.py  0003_remove_question_title_question_files_context_and_more.py  0004_remove_repository_files_branch_prompt_and_more.py
apps/Loginer/: apps.py  forms.py  urls.py  views.py
apps/Loginer/migrations/: 0001_initial.py
apps/Repository/: admin.py  apps.py  forms.py  tasks.py  urls.py  utils.py  views.py
apps/Repository/templatetags/: custom_filters.py
apps/Repository/utils/: ai_utils.py  exceptions_utils.py  git_utils.py  models_utils.py  utils.py
apps/Repository/views/: api_views.py  class_views.py
apps/static/CSS/: RepoDetail.css  base.css
apps/static/JavaScript/: CashClear.js  RepoDetail.js  base.js
apps/templates/_helper/: form_output.html
apps/templates/analyzer/: create_repo_form.html  repo_detail.html  user_repos_list.html
apps/templates/analyzer/_helper/: tree_node.html
apps/templates/loginer/: change_password.html  login.html  password_change_done.html  signup.html  update_user_settings.html
apps/templates/main/: base.html  main_page.html
