[tool.poetry]
name = "hangover"
version = "0.1.0"
description = ""
authors = ["Nik-BZ-22 <bakhamyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
requests = "^2.32.3"
httpx = "^0.28.1"
celery = "^5.4.0"
redis = "^5.2.1"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"
google-generativeai = "^0.8.3"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
